Tue Dec 12 16:13:34 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * orbsvcs/orbsvcs/Log/Hash_LogRecordStore.cpp:

          Use .in() to squelch conversion warning.

Tue Dec 12 15:05:04 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * NEWS:

          Provided an overview of the following changes.

        * orbsvcs/orbsvcs/CosTrading.mpc:

          Added a verbatim section to automate the regeneration of the lex
          file for the Trader Server library.  Which includes running the
          lex output through sed and then patching at the end.

        * orbsvcs/orbsvcs/Trader/Constraint_Nodes.h:
        * orbsvcs/orbsvcs/Trader/Constraint_Nodes.cpp:

          Switched from using CORBA::Long/CORBA::ULong to
          CORBA::LongLong/CORBA::ULongLong to support 64-bit integers.  The
          union contains various integral types and to support both Long and
          LongLong would be redundant.

        * orbsvcs/orbsvcs/Trader/Constraint_Visitors.h:
        * orbsvcs/orbsvcs/Trader/Constraint_Visitors.cpp:

          Added support dynamic sequences of CORBA::LongLong/
          CORBA::ULongLong.

        * orbsvcs/orbsvcs/Trader/Constraint_l.cpp.diff:
        * orbsvcs/orbsvcs/Trader/Constraint_l.cpp:
        * orbsvcs/orbsvcs/Trader/constraint.l:

          Updated the {float} regular expression to allow negative values
          for floating point numbers.

          Added support for CORBA::LongLong and CORBA::ULongLong.  Since all
          integers are stored as 64-bit values instead of 32-bit values two
          conversion functions (trader_stroll and trader_stroull) are used
          to convert text into CORBA::LongLong and CORBA::ULongLong.  They
          are good candidates for moving into ACE as emulation for platforms
          that do not natively support strtoll and stroull.

          Also, fixed an issue where negative integers were being stored and
          compared as unsigned integers.
